@@ -40,15 +40,17 @@ testModuleInfo {
     requires("com.swirlds.base.test.fixtures")
     requires("com.swirlds.component.framework")
     requires("com.swirlds.metrics.api")
-    requires("org.apache.logging.log4j")
-    requires("org.assertj.core")
-    requires("org.hiero.consensus.utility")
     requires("org.hiero.consensus.metrics")
     requires("org.hiero.consensus.roster")
     requires("org.hiero.consensus.roster.test.fixtures")
+    requires("org.hiero.consensus.utility")
+    requires("org.apache.logging.log4j")
+    requires("org.assertj.core")
     requires("org.junit.jupiter.params")
     requires("org.mockito")
     requiresStatic("com.github.spotbugs.annotations")
+
+    runtimeOnly("org.hiero.consensus.event.intake.concurrent")
 }
 
 testIntegrationModuleInfo { //
@@ -56,6 +58,7 @@ testIntegrationModuleInfo { //
 }
 
 extensions.getByName<GradleOnlyDirectives>("testOtterModuleInfo").apply {
+    runtimeOnly("org.hiero.consensus.event.intake.concurrent")
     runtimeOnly("io.grpc.netty.shaded")
 }
 
@@ -63,21 +66,8 @@ extensions.getByName<GradleOnlyDirectives>("testChaosModuleInfo").apply {
     runtimeOnly("io.grpc.netty.shaded")
 }
 
-// Fix testcontainers module system access to commons libraries
-// testcontainers 2.0.2 is a named module but doesn't declare its module-info dependencies
-// We need to grant it access to the commons modules via JVM arguments
-// Note: automatic modules are named from their package names (org.apache.commons.io for commons-io
-// JAR)
 // This is applied to all Test tasks to work across all execution methods (local, CI, etc.)
-tasks.withType<Test>().configureEach {
-    maxHeapSize = "8g"
-    jvmArgs(
-        "--add-reads=org.testcontainers=org.apache.commons.lang3",
-        "--add-reads=org.testcontainers=org.apache.commons.compress",
-        "--add-reads=org.testcontainers=org.apache.commons.io",
-        "--add-reads=org.testcontainers=org.apache.commons.codec",
-    )
-}
+tasks.withType<Test>().configureEach { maxHeapSize = "8g" }
 
 // This should probably not be necessary (Log4j issue?)
 // https://github.com/apache/logging-log4j2/pull/3053
